syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";

option go_package = "gateway/api/v1;v1";
option java_multiple_files = true;
option java_package = "api.v1";

service User {
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
    rpc GetUser (GetUserRequest) returns (GetUserReply);
    rpc ListUser (ListUserRequest) returns (ListUserReply);
    rpc Login (LoginRequest) returns (LoginReply)  {
        option (google.api.http) = {
            get: "/login",
        };
    }
}

message CreateUserRequest {}
message CreateUserReply {}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {}
message GetUserReply {}

message ListUserRequest {}
message ListUserReply {}

// The request message containing the user's name.
message LoginRequest {
    string username = 1;
    string password = 2;
}
  
  // The response message containing the greetings
  message LoginReply {
    string message = 1;
  }
  